--- a/src/CommandAPI/appsettings.json
+++ b/src/CommandAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PostgreSqlConnection": "User ID=pif;Password=paf;Host=localhost;Port=5432;Database=CmdAPI;Pooling=true;"
+  }
 }
